src/css/_main.scss
#main { position: relative; background-color: #082f4d; padding: 25px 0 75px 0; background-image: url(../img/landscape.jpg); background-position: top left; background-size: cover; color: #fff;
	h3 { margin-top: 0; font-weight: 400; }
	.brand { margin-bottom: 50px; }
	.coin-currency-dropdown {
	    border-radius: 3px;
	    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
	    -webkit-transition: all 100ms linear;
	    -moz-transition: all 100ms linear;
	    -o-transition: all 100ms linear;
	    -ms-transition: all 100ms linear;
	    transition: all 100ms linear;
		position: absolute;
		right: 0;
		top: 32px;
		padding: 10px 15px 0;
		z-index: 1;
		background: #fff;

		.coin { width: 200px; margin-bottom: 10px; cursor: pointer; }
	}

	.selectedCoin { position: absolute; top: 5px; right: 10px; cursor: pointer; font-size: 18px; font-weight: 700; color: #fff;
		i.fa-angle-down { position: relative; top: 2px; margin-left: 8px; }
		.coin-icon { position: relative; top: 1px; }
		span { position: relative; top: 2px; left: -10px; }
	}

	.alert { position: absolute; top: 0; left: 0; width: 100%; z-index: 2; }

	@media (min-width: $screen-sm-min) { padding: 40px 0 135px; }
}

